--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Title of the document</title>
+	<title> Stock Screener</title>
 </head>
-
 <body>
-The content of the document......
+	Stock Screener
 </body>
-
 </html>
